@@ -157,6 +157,8 @@ class AbstractBaseTest(object):
         v0 = Vector(n)
         data = empty((v0.local_size()), dtype='d')
         v0.get_local(data)
+        data = empty((v0.local_size()*2), dtype='d')
+        self.assertRaises(TypeError, v0.get_local, data[::2])
 
     def test_set_local(self):
         from numpy import zeros
@@ -164,6 +166,8 @@ class AbstractBaseTest(object):
         v0 = Vector(n)
         data = zeros((v0.local_size()), dtype='d')
         v0.set_local(data)
+        data = zeros((v0.local_size()*2), dtype='d')
+        self.assertRaises(TypeError, v0.get_local, data[::2])
 
     def test_add_local(self):
         from numpy import zeros
@@ -171,6 +175,8 @@ class AbstractBaseTest(object):
         v0 = Vector(n)
         data = zeros((v0.local_size()), dtype='d')
         v0.add_local(data)
+        data = zeros((v0.local_size()*2), dtype='d')
+        self.assertRaises(TypeError, v0.get_local, data[::2])
 
     #def test_gather(self):
 
@@ -295,10 +301,17 @@ class DataTester:
         data = v.data()
         self.assertTrue((data == array).all())
 
+        # Test none writeable of a shallow copy of the data
+        data = v.data(False)
+        def write_data(data):
+            data[0] = 1
+        self.assertRaises(RuntimeError, write_data, data)
+
         # Test for down_casted Vector
         v = down_cast(v)
         data = v.data()
         self.assertTrue((data==array).all())
+
 
 class DataNotWorkingTester:
     def test_vector_data(self):
